kubernetes/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: loki-stack-grafana
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
  - host: devops-monitor-le.darienc.com
    http:
      paths:
      - backend:
          service:
            name: loki-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - devops-monitor-le.darienc.com
    secretName: grafana-tls
